avoid jumping of downlaod icon on click #525

--- a/visualization/app/codeCharta/ui/filePanel/filePanel.component.scss
+++ b/visualization/app/codeCharta/ui/filePanel/filePanel.component.scss
@@ -140,6 +140,11 @@ file-panel-component {
 					color: #eee;
 				}
 			}
+
+			:active {
+				margin: 0px;
+				padding: 0px;
+			}
 		}
 
 		&.download {
